Closed Bug 468260 Opened 17 years ago Closed 17 years ago

Crash [@ sa_stream_write]

Categories

(Core :: Audio/Video, defect)

defect
Not set
critical

Tracking

()

VERIFIED FIXED

People

(Reporter: timeless, Assigned: cajbir)

References

()

Details

(Keywords: crash, verified1.9.1)

Crash Data

Attachments

(1 file)

295 buf = new_buffer(nbytes); 296 memcpy(buf->data,data, nbytes); 297 298 if ( buf == NULL) 299 return SA_ERROR_OOM; alloc() crash() check() oops.
Where is this snippet in firefox trunk code?
See the URL, it contains a link to the source and the line. But it's in media/libsydneyaudio/src/sydney_audio_sunaudio.c
I see. Thanks for pointing this out. I posted a patch at http://trac.annodex.net/ticket/442
Patch applied upstream in svn.annodex.net r3822
Assignee: nobody → brian.lu
Assignee: brian.lu → chris.double
Status: NEW → ASSIGNED
Flags: blocking1.9.1?
Blocks: 463627
Flags: blocking1.9.1? → blocking1.9.1+
Flags: blocking1.9.1+ → blocking1.9.1?
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Whiteboard: [baking for 1.9.1]
Flags: blocking1.9.1? → blocking1.9.1+
Keywords: fixed1.9.1
Whiteboard: [baking for 1.9.1]
Status: RESOLVED → VERIFIED
Crash Signature: [@ sa_stream_write]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: